Fixed bad z-index on tab

--- a/plugins/frontlinesms-core/web-app/css/head.css
+++ b/plugins/frontlinesms-core/web-app/css/head.css
@@ -11,7 +11,7 @@ body { background-image:url("../images/head_background.png");
 #main-nav li { background-image:url("../images/tab/standard.png"); background-repeat:no-repeat;
 	width:110px; height:26px; }
 #main-nav li.current, #main-nav li.current:hover, #main-nav li.current:active { background-image:url("../images/tab/standard_current.png");
-	z-index:10; padding-top:1px; position:relative; bottom:-1px; }
+	z-index:6; padding-top:1px; position:relative; bottom:-1px; }
 #main-nav li:hover { background-image:url("../images/tab/standard_hover.png"); }
 #main-nav li:active { background-image:url("../images/tab/standard_pressed.png"); }
 #main-nav li.message { background-image:url("../images/tab/message.png"); width:150px; }
